SUBDIRS = ./SynchronousTCPServer
#          SynchronousTCPClient
#          AsynchronousTCPServer
#          AsynchronousTCPClient
#          ChattingTCPServer
#          ChattingTCPClient      
#          AsynchronousUDPServer  
#          AsynchronousUDPClient  
#          Timer1                
#          Timer2                
#          Timer3 
#          Timer4
#          WorkerThread
#          poll
#          strand
#          AsyncReadFile
#          resolver
#          async_read_until
